--- a/src/app/component/customerdetail/customerdetail.component.html
+++ b/src/app/component/customerdetail/customerdetail.component.html
@@ -24,8 +24,8 @@
               <img [src]="customer.imageUrl" alt="Admin"
                    class="rounded-circle p-1 bg-primary" width="110">
               <div class="mt-3">
-                <h4>{{customer.firstName}}</h4>
-                <p class="text-secondary mb-1">{{customer.firstName}}</p>
+                <h4>{{customer.firstName}} {{customer.lastName}}</h4>
+                <p class="text-secondary mb-1">Username: {{customer.username}}</p>
                 <p class="text-muted font-size-sm">ID: {{customer.id}}</p>
               </div>
             </div>
@@ -64,7 +64,14 @@
                 <h6 class="mb-0">Gender</h6>
               </div>
               <div class="col-sm-9 text-secondary">
-                <input [disabled]="mode==='locked'" type="text" class="form-control" [value]="customer.gender">
+                <select [disabled]="mode==='locked'" class="form-select">
+                  <option *ngFor="let opt of genderOptions"
+                          [selected]="opt === customer.gender"
+                          [value]="opt"
+                  >
+                    {{opt}}
+                  </option>
+                </select>
               </div>
             </div>
             <div class="row mb-3">
@@ -72,7 +79,9 @@
                 <h6 class="mb-0">Date of birth</h6>
               </div>
               <div class="col-sm-9 text-secondary">
-                <input [disabled]="mode==='locked'" type="text" class="form-control" [value]="customer.dateOfBirth">
+                <div class="input-group date" id="datepicker">
+                  <input [disabled]="mode==='locked'" type="date" class="form-control" id="date" [value]="customer.dateOfBirth"/>
+                </div>
               </div>
             </div>
             <div class="row mb-3">
@@ -88,7 +97,14 @@
                 <h6 class="mb-0">Status</h6>
               </div>
               <div class="col-sm-9 text-secondary">
-                <input [disabled]="mode==='locked'" type="text" class="form-control" [value]="customer.status">
+                <select [disabled]="mode==='locked'" class="form-select">
+                  <option *ngFor="let opt of statusOptions"
+                          [selected]="opt === customer.status"
+                          [value]="opt"
+                  >
+                    {{opt}}
+                  </option>
+                </select>
               </div>
             </div>
             <div class="row mb-3">
@@ -133,3 +149,5 @@
     </div>
   </div>
 </div>
+<script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script src ="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
