--- a/src/app/component/customerdetail/customerdetail.component.html
+++ b/src/app/component/customerdetail/customerdetail.component.html
@@ -1,3 +1,4 @@
+
 <div class="main-body">
   <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
     <div class="container">
@@ -21,15 +22,14 @@
         <div class="card">
           <div class="card-body">
             <div class="d-flex flex-column align-items-center text-center">
-              <div class="position-relative">
-                <div>
-                  <a (click)="openEditPhotoDialog(customer)">
-                    <img [src]="customer.imageUrl" alt="{{customer.username}}'s image"
-                       class="rounded-circle p-1 bg-primary img-responsive" width="110"
-                       (mouseenter)="showOverlay = true" (mouseleave)="showOverlay = false">
-                    <img *ngIf="showOverlay" class="overlay" src="https://cdn2.iconfinder.com/data/icons/picol-vector/32/image_edit-512.png" alt="Overlay Image"
-                         class="overlay-image rounded-circle" width="110">
-                  </a>
+              <div class="position-relative" style="cursor: pointer;">
+                <div (mouseenter)="showOverlay = true" (mouseleave)="showOverlay = false">
+                    <a class="position-relative" data-bs-toggle="modal" data-bs-target="#imageUrlUpdateModal">
+                      <img [src]="customer.imageUrl" alt="{{customer.username}}'s image"
+                           class="rounded-circle p-1 bg-primary img-responsive" width="110">
+                      <img *ngIf="showOverlay" src="https://cdn2.iconfinder.com/data/icons/picol-vector/32/image_edit-512.png"
+                           alt="Overlay Image" class="overlay-image p-1 bg-primary rounded-circle" width="110">
+                    </a>
                 </div>
               </div>
               <div class="mt-3">
@@ -45,39 +45,39 @@
           <div class="card">
             <div class="card-body">
               <div class="row mb-3">
-                <div class="col-sm-9 text-secondary">
+                <div class="col-sm-10 text-secondary">
                   <input [hidden]="true" class="form-control" [ngModel]="customer?.id" name="id">
                 </div>
               </div>
               <div class="row mb-3">
-                <div class="col-sm-3">
-                  <h3 class="mb-0">First Name</h3>
+                <div class="col-sm-2">
+                  <h6 class="mb-0">First Name</h6>
                 </div>
-                <div class="col-sm-9 text-secondary">
+                <div class="col-sm-10 text-secondary">
                   <input [disabled]="mode==='locked'" type="text" class="form-control" [ngModel]="customer?.firstName" name="firstName">
                 </div>
               </div>
               <div class="row mb-3">
-                <div class="col-sm-3">
-                  <h3 class="mb-0">Last Name</h3>
+                <div class="col-sm-2">
+                  <h6 class="mb-0">Last Name</h6>
                 </div>
-                <div class="col-sm-9 text-secondary">
+                <div class="col-sm-10 text-secondary">
                   <input [disabled]="mode==='locked'" type="text" class="form-control" [ngModel]="customer?.lastName" name="lastName">
                 </div>
               </div>
               <div class="row mb-3">
-                <div class="col-sm-3">
-                  <h3 class="mb-0">Username</h3>
+                <div class="col-sm-2">
+                  <h6 class="mb-0">Username</h6>
                 </div>
-                <div class="col-sm-9 text-secondary">
+                <div class="col-sm-10 text-secondary">
                   <input [disabled]="mode==='locked'" type="text" class="form-control" [ngModel]="customer?.username" name="username">
                 </div>
               </div>
               <div class="row mb-3">
-                <div class="col-sm-3">
-                  <h3 class="mb-0">Gender</h3>
+                <div class="col-sm-2">
+                  <h6 class="mb-0">Gender</h6>
                 </div>
-                <div class="col-sm-9 text-secondary">
+                <div class="col-sm-10 text-secondary">
                   <select [disabled]="mode==='locked'" class="form-select" [ngModel]="customer?.gender" name="gender">
                     <option *ngFor="let opt of genderOptions"
                             [selected]="opt === customer.gender"
@@ -89,28 +89,28 @@
                 </div>
               </div>
               <div class="row mb-3">
-                <div class="col-sm-3">
-                  <h3 class="mb-0">Date of birth</h3>
+                <div class="col-sm-2">
+                  <h6 class="mb-0">Date of birth</h6>
                 </div>
-                <div class="col-sm-9 text-secondary">
+                <div class="col-sm-10 text-secondary">
                   <div class="input-group date" id="datepicker">
                     <input [disabled]="mode==='locked'" type="date" class="form-control" id="date" [ngModel]="customer?.dateOfBirth" name="dateOfBirth"/>
                   </div>
                 </div>
               </div>
               <div class="row mb-3">
-                <div class="col-sm-3">
-                  <h3 class="mb-0">Email</h3>
+                <div class="col-sm-2">
+                  <h6 class="mb-0">Email</h6>
                 </div>
-                <div class="col-sm-9 text-secondary">
+                <div class="col-sm-10 text-secondary">
                   <input [disabled]="mode==='locked'" type="text" class="form-control" [ngModel]="customer?.email" name="email">
                 </div>
               </div>
               <div class="row mb-3">
-                <div class="col-sm-3">
-                  <h3 class="mb-0">Status</h3>
+                <div class="col-sm-2">
+                  <h6 class="mb-0">Status</h6>
                 </div>
-                <div class="col-sm-9 text-secondary">
+                <div class="col-sm-10 text-secondary">
                   <select [disabled]="mode==='locked'" class="form-select" [ngModel]="customer?.status" name="status">
                     <option *ngFor="let opt of statusOptions"
                             [selected]="opt === customer.status"
@@ -122,24 +122,24 @@
                 </div>
               </div>
               <div class="row mb-3">
-                <div class="col-sm-3">
-                  <h3 class="mb-0">Address</h3>
+                <div class="col-sm-2">
+                  <h6 class="mb-0">Address</h6>
                 </div>
-                <div class="col-sm-9 text-secondary">
+                <div class="col-sm-10 text-secondary">
                   <input [disabled]="mode==='locked'" type="text" class="form-control" [ngModel]="customer?.address" name="address">
                 </div>
               </div>
               <div class="row mb-3">
-                <div class="col-sm-3">
-                  <h3 class="mb-0">Phone</h3>
+                <div class="col-sm-2">
+                  <h6 class="mb-0">Phone</h6>
                 </div>
-                <div class="col-sm-9 text-secondary">
+                <div class="col-sm-10 text-secondary">
                   <input [disabled]="mode==='locked'" type="text" class="form-control" [ngModel]="customer?.phone" name="phone">
                 </div>
               </div>
               <div class="row">
-                <div class="col-sm-3"></div>
-                <div class="col-sm-9 text-secondary">
+                <div class="col-sm-2"></div>
+                <div class="col-sm-10 text-secondary">
                   <button (click)="changeMode(mode, editForm.value)" type="button" class="btn btn-primary px-4">{{buttonText}}</button>
                 </div>
               </div>
@@ -149,6 +149,31 @@
     </div>
   </div>
 </div>
-<script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-<script src ="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+
+<!-- Modal -->
+<div class="modal fade" id="imageUrlUpdateModal" tabindex="-1" aria-labelledby="imageUrlUpdateModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="imageUrlUpdateModalLabel">Update Image</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form #editImageForm="ngForm">
+          <div class="form-group">
+            <label for="imageUrl">Image URL</label>
+            <input type="text" ngModel="{{customer?.imageUrl}}" id="imageUrl" name="imageUrl" class="form-control" placeholder="Image URL">
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" id="edit-imageurl-close" data-bs-dismiss="modal" class="btn btn-secondary">Close</button>
+        <button (click)="onEditImageUrl(editImageForm.value)" class="btn btn-primary" >Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 
