--- a/src/styles.css
+++ b/src/styles.css
@@ -2,20 +2,14 @@
 .position-relative {
   position: relative;
 }
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 255, 255, 0.5); /* Przezroczysty kolor tła */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 .overlay-image {
-  width: 35px; /* Dostosuj rozmiar obrazka do własnych preferencji */
-  height: 35px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); /* Przesunięcie obrazka na środek */
+  opacity: 0.7; /* Przezroczystość nakładki */
+  z-index: 1; /* Ustawienie z-index umożliwia wyświetlanie nakładki na obrazku profilowym */
+  width: 50px; /* Dostosuj szerokość nakładki do preferowanego rozmiaru */
+  height: 50px; /* Dostosuj wysokość nakładki do preferowanego rozmiaru */
 }
-
