--- a/src/app/component/customers/customers.component.html
+++ b/src/app/component/customers/customers.component.html
@@ -9,7 +9,9 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/customers">Home</a>
+            <a class="nav-link active" data-bs-toggle="modal" data-bs-target="#addCustomerModal" aria-current="page" style="cursor: pointer">
+              Add customer
+            </a>
           </li>
         </ul>
         <form #searchForm="ngForm" (ngSubmit)="goToPage(searchForm.value.name)"  class="d-flex" role="search">
@@ -66,6 +68,9 @@
               <td>{{customer.address}}</td>
               <td>
                 <button [routerLink]="['/customer/', customer.id]" type="button" class="button btn btn-primary">View</button>
+                <button (click)="setDeleteCustomer(customer)" type="button" data-bs-toggle="modal" data-bs-target="#deleteCustomerModel" class="button btn btn-danger ms-2">
+                  Delete
+                </button>
               </td>
             </tr>
             </tbody>
@@ -108,3 +113,93 @@
     </div>
   </div>
 </ng-container>
+
+
+<!-- Add Customer Modal -->
+<div class="modal fade" id="addCustomerModal" tabindex="-1" role="dialog" aria-labelledby="addCustomerModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="addCustomerModalLabel">Add Customer</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form #addForm="ngForm" (ngSubmit)="onAddCustomer(addForm)">
+          <div class="form-group">
+            <label for="firstName">First name</label>
+            <input type="text" ngModel name="firstName" id="firstName"
+                   class="form-control" placeholder="First name" required>
+          </div>
+          <div class="form-group">
+            <label for="lastName">Last name</label>
+            <input type="text" ngModel name="lastName" id="lastName"
+                   class="form-control" placeholder="Last name" required>
+          </div>
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" ngModel name="username" id="username"
+                   class="form-control" placeholder="Username" required>
+          </div>
+          <div class="form-group">
+            <label for="gender">Gender</label>
+            <select class="form-select" ngModel name="gender" id="gender" required>
+              <option *ngFor="let opt of genderOptions" [value]="opt">
+                {{opt}}
+              </option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="dateOfBirth">Date of Birth</label>
+            <div class="input-group date" id="datepicker">
+              <input type="date" class="form-control" id="dateOfBirth" ngModel name="dateOfBirth" placeholder="Date of Birth" required/>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="text" ngModel name="email" id="email"
+                   class="form-control" placeholder="Email" required>
+          </div>
+          <div class="form-group">
+            <label for="address">Address</label>
+            <input type="text" ngModel name="address" id="address"
+                   class="form-control" placeholder="Address" required>
+          </div>
+          <div class="form-group">
+            <label for="phone">Phone</label>
+            <input type="text" ngModel name="phone" id="phone"
+                   class="form-control" placeholder="Phone" required>
+          </div>
+          <div class="form-group">
+            <label for="imageUrl">Image URL</label>
+            <input type="text" ngModel name="imageUrl" id="imageUrl"
+                   class="form-control" placeholder="Image URL" required>
+          </div>
+          <div class="modal-footer">
+            <button type="button" id="add-employee-form" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary" >Add customer</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Delete Modal -->
+<div class="modal fade" id="deleteCustomerModel" tabindex="-1" role="dialog" aria-labelledby="deleteModelLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="deleteModelLabel">Delete Customer</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Are you sure you want to delete customer?</p>
+        <div class="modal-footer">
+          <button type="button" id="delete-button-close" data-bs-dismiss="modal" class="btn btn-secondary">No</button>
+          <button (click)="onDeleteCustomer(deleteCustomer.id)" class="btn btn-primary" >Yes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
