--- a/src/app/component/customerdetail/customerdetail.component.html
+++ b/src/app/component/customerdetail/customerdetail.component.html
@@ -140,7 +140,9 @@
               <div class="row">
                 <div class="col-sm-2"></div>
                 <div class="col-sm-10 text-secondary">
-                  <button (click)="changeMode(mode, editForm.value)" type="button" class="btn btn-primary px-4">{{buttonText}}</button>
+                  <button (click)="changeMode(mode, editForm.value)" type="button" class="btn btn-primary px-4">
+                    {{buttonText}}
+                  </button>
                 </div>
               </div>
             </div>
